# dana

./: README  Test.hs  ixi.cabal  test.u
IXi/: Conversion.hs  Helpers.hs  Interface.hs  Parser.hs  Prelude.hs  Proof.hs  Sequent.hs  Term.hs  TermZipper.hs
PiSigma/: Any.hs  Compiler.hs  SupplyT.hs
SystemIG/: Calculus.hs  NormalForm.hs
SystemU/: AST.hs  Any.hs  Compiler.hs  Parser.hs  UnsafeCompile.hs
SystemUBox/: AST.hs  Any.hs  Compiler.hs  Parser.hs  UnsafeCompile.hs
examples/: fix.u  test.u
experiments/: icl.hs  icl_core.hs  lazy_model.hs  lspec.hs  naive_icl_model.v  normal_forms.hs  stack_machine.c
experiments/LazyHNF/: Compiler.hs
experiments/interp-stack/: interpreter.hs
experiments/interp-stack/InterpStack/: DepthLazyNF.hs  Embedded.hs  Exp.hs  HOAS.hs  LazyNF.hs
experiments/lazy-hnf/: interpreter.hs
experiments/lazy-hnf/LazyHNF/: Compiler.hs  HOAS.hs  LazyHNF.hs  LazyNF.hs
experiments/linear/: compiler.hs  kernel.c  kernel.h
ixi/: ixi.cabal
ixi/IXi/: Conversion.hs  HOAS.hs  Helpers.hs  Prelude.hs  Proof.hs  Sequent.hs  SingleShell.hs  Tactic.hs  Tactics.hs  Term.hs
notes/: PiSigma_Interactivity.txt  YNF.txt  hnf_reduction_example.txt
old/: ixi.hs
old/IXi/: Parser.hs  Sequent.hs  Term.hs  TermZipper.hs  Undo.hs
